get back on base portfolio

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,8 @@
-<footer>
-    <p>Copyright {{getCurrentYear}}</p>
+<footer class="text-muted">
+  <div class="container">
+    <p class="float-right">
+      <a href="#">Back to top</a>
+    </p>
+    <p>@{{getCurrentYear}} Mr's Lab handcraft <i class="fas fa-flask"></i> Get in touch on <a href="https://www.linkedin.com/in/charly-mrazeck-1143a6105/"> LinkedIn </a></p>
+  </div>
 </footer>
