--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>{{pageTitle}}</title>
-    </head>
-    <body>
-        {{> header}}
-        <p>{{screamIt welcomeMessage}}</p>
-        {{> footer}}
-    </body>
 
-</html> 
+<head>
+    <meta charset="utf-8">
+    <title>{{pageTitle}}</title>
+    <link rel="icon" href="http://www.yoursite.com/favicon.ico?v=2" />
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/css/footer.css">
+    <link rel="stylesheet" type="text/css" href="/css/jumbotron.css">
+    <link rel="stylesheet" type="text/css" href="/css/skills.css">
+    <link rel="stylesheet" type="text/css" href="/css/timeline.css">
+
+</head>
+
+<body>
+    {{> navbar}}
+
+    <section class="jumbotron text-center">
+        {{> top}}
+    </section>
+
+<div class="album py-5 bg-light" id="projects">
+  <div class="container">
+    <h1 class=" section-heading section-title text-center ">Some of my projects</h1>
+    <div class="row">
+      
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow" style="min-height:29rem">
+          <img class="card-img-top" src="img"
+            alt="Card image cap">
+          <div class="card-body">
+            <p class="card-title" style="font-weight:bold;font-family: 'Encode Sans Expanded', sans-serif;">nom</p>
+            <p class="card-text">desc</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <a href="link" class="btn btn-view btn-sm btn-outline-secondary btn-view">View</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+    <section class="jumbotron text-center" id="skills">
+        {{> skills}}
+    </section>
+    <div class="album py-5 bg-light" id="roadmap">
+        {{> roadmap}}
+
+    </div>
+
+
+    </main>
+    {{> footer}}
+</body>
+<meta charset="UTF-8">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+
+</html>
